[gd_scene format=3 uid="uid://c22q5e8smutqc"]

[ext_resource type="Script" path="res://Scripts/pause_main_page.gd" id="1_406x6"]
[ext_resource type="Script" path="res://Scripts/Config_page_script.gd" id="1_hltfd"]

[node name="CanvasLayer" type="CanvasLayer" unique_id=1331193924]
layer = 2

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1039993943]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="MarginContainer" unique_id=555891983]
layout_mode = 2

[node name="MainPage" type="Control" parent="MarginContainer/Panel" unique_id=1649793194]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_406x6")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MainPage" unique_id=1486539393]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MainPage/MarginContainer" unique_id=77090250]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/Panel/MainPage/MarginContainer/VBoxContainer" unique_id=856670277]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Voltar"

[node name="Config" type="Button" parent="MarginContainer/Panel/MainPage/MarginContainer/VBoxContainer" unique_id=2088706556]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Configurações"

[node name="MainMenu" type="Button" parent="MarginContainer/Panel/MainPage/MarginContainer/VBoxContainer" unique_id=471256269]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Menu Principal"

[node name="ConfigPage" type="Control" parent="MarginContainer/Panel" unique_id=1091951577]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hltfd")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/ConfigPage" unique_id=832488046]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/ConfigPage/MarginContainer" unique_id=1778469814]
layout_mode = 2

[node name="Titulo" type="Label" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=1560644672]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Configurações"
horizontal_alignment = 1

[node name="Label_Vol_Principal" type="Label" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=1049292807]
layout_mode = 2
text = "Volume principal"

[node name="Slider_Principal" type="HSlider" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=731418995]
layout_mode = 2

[node name="Label_Vol_Musica" type="Label" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=310114260]
layout_mode = 2
text = "Volume música"

[node name="Slider_Musica" type="HSlider" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=1426506015]
layout_mode = 2

[node name="Label_Vol_SFX" type="Label" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=1709833427]
layout_mode = 2
text = "Volume SFX"

[node name="Slider_SFX" type="HSlider" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=1699603117]
layout_mode = 2

[node name="Label_Vol_SFX2" type="Label" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=548317208]
layout_mode = 2
text = "Tamanho da tela"

[node name="ResolutionButton" type="OptionButton" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=1142540853]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/Panel/ConfigPage/MarginContainer/VBoxContainer" unique_id=2103378811]
layout_mode = 2
text = "Voltar"
